Prevent the `loading` spinner from overlapping a `monochrome` `outline` `Button`’s text (#5145)

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -392,6 +392,11 @@ $stacking-order: (
       opacity: 0.4;
     }
 
+    // Prevents the loading spinner from overlapping the button’s text, while retaining its width.
+    &.loading .Text {
+      visibility: hidden;
+    }
+
     &.iconOnly {
       @include recolor-icon(currentColor);
 
